--- a/resources/scss/partials/_footer.scss
+++ b/resources/scss/partials/_footer.scss
@@ -26,7 +26,7 @@
 }
 
 .footer-middle{
-    background-image: url(../assets/img/footer-bg.jpg);
+    background-image: url(/img/footer-bg.jpg);
     background-repeat:no-repeat ;
     min-height: 350px;
     background-size: cover;
@@ -78,6 +78,7 @@
     h4{
         color: white;
         margin-bottom: 10px;
+        font-size: 18px;
     }
     li{
         list-style: none;
@@ -90,8 +91,7 @@
     }
     .dc-me{
         margin-right: 30px;
-    }
-    .dc-mt{
         margin-top: 17px;
     }
+
 }
